Add template tutorial using mako

--- a/playbook/roles/Python/tasks/install-pyramid.yml
+++ b/playbook/roles/Python/tasks/install-pyramid.yml
@@ -14,3 +14,7 @@
 - name    : Install waitress
   pip     :
     name  : waitress
+
+- name    : Install mako template engine
+  pip     :
+    name  : pyramid_mako
