Add database settings
and add libraries
- sqlalchemy
- pyramid_tm
- sqlahelper

--- a/bankaccount/development.ini
+++ b/bankaccount/development.ini
@@ -22,6 +22,9 @@ pyramid.includes =
 # wsgi server configuration
 ###
 
+sqlalchemy.url = sqlite://%(here)s/bankaccount.db
+sqlalchemy.echo = true
+
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
