--- a/bankaccount/development.ini
+++ b/bankaccount/development.ini
@@ -22,7 +22,7 @@ pyramid.includes =
 # wsgi server configuration
 ###
 
-sqlalchemy.url = sqlite://%(here)s/bankaccount.db
+sqlalchemy.url = sqlite:///%(here)s/bankaccount.db
 sqlalchemy.echo = true
 
 [server:main]
