Mod Python provisioning
PyEnvをインストールする

--- a/playbook/roles/Python/tasks/main.yml
+++ b/playbook/roles/Python/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
-- include: install-pip.yml
-- include: install-pyramid.yml
+- include: install-yum-packages.yml
+  become: yes
+- include: install-pyenv.yml
+  become: no
